# OpenDB

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  README.md  dhaval.txt
include/lef56/: lefiCrossTalk.hpp  lefiDebug.h  lefiKRDefs.hpp  lefiLayer.hpp  lefiMacro.hpp  lefiProp.h  lefiPropType.hpp  lefiUser.hpp  lefiUtil.hpp  lefiViaRule.hpp  lefrReader.h  lefrReader.hpp
include/opendb/: ISdb.h  IZdcr.h  IZgui.h  Logger.h  ZComponents.h  ZException.h  ZFactory.h  ZImplements.h  ZImplements.hpp  ZInterface.h  ZNamespace.h  ZObject.h  ZSession.h  ads.h  adsAllocator.h  adsDList.h  adsPagedVector.h  adsRTree.h  adsSList.h  arnoldi1.h  array1.h  array2d.h  atypes.h  b100.h  block.h  box.h  buffer_data.h  charBuffer.h  cmd2zroute.h  conn.h  darr.h  db.h  db1.h  dbBlockCallBackObj.h  dbBlockSet.h  dbCCSegSet.h  dbDiff.h  dbExtControl.h  dbId.h  dbIterator.h  (+73 more)
jenkins/: build.sh  install.sh  test-py.sh  test-tcl.sh  test.sh
msh/docs/: README
msh/src/: Makefile  Makefile.utils
sdcrypt/: Blowfish.cpp  Blowfish.h  Makefile  README  Test.cpp  gen_token  sdcrypt.cpp  sdcrypt.h
src/cdslef56/: CMakeLists.txt
src/cdslef56/clef/: .cmake.state  crypt.c  lef.y  lefiLayer.c  lefiTBExt.c  lefiUnits.c  lefiUser.h  lefiViaRule.h  lefrReader.h  lex.cpph
src/cdslef56/lef/: lef.tab.cpp  lef.y  lef_keywords.cpp  lefiDebug.cpp  lefiDebug.hpp  lefiMacro.cpp  lefiNonDefault.hpp  lefiProp.cpp  lefiUnits.cpp  lefrReader.cpp
src/cdslef56/lefdiff/: Makefile  diffLefRW.hpp  lefdefdiff
src/cdslef56/lefrw/: lefrw.cpp
src/cdslef56/lefzlib/: .cmake.state
src/codeGenerator/: README.md  final_schema.json  gen.py  helper.py  schema-verilog.json  schema.json  schema_2.json
src/db/: CMakeLists.txt  Logger.cpp  dbArrayTable.h  dbArrayTable.hpp  dbAttrTable.h  dbBPin.cpp  dbBPin.h  dbBPinItr.cpp  dbBPinItr.h  dbBTerm.cpp  dbBTerm.h  dbBTermItr.cpp  dbBTermItr.h  dbBlock.cpp  dbBlock.h  dbBlockCallBackObj.cpp  dbBlockItr.cpp  dbBlockItr.h  dbBlockSet.h  dbBlockage.cpp  dbBlockage.h  dbBox.cpp  dbBox.h  dbBoxItr.cpp  dbBoxItr.h  dbCCSeg.cpp  dbCCSeg.h  dbCCSegItr.cpp  dbCCSegItr.h  dbCCSegSet.h  dbCapNode.cpp  dbCapNode.h  dbCapNodeItr.cpp  dbCapNodeItr.h  dbChip.cpp  dbChip.h  dbCommon.h  dbCore.h  dbDatabase.cpp  dbDatabase.h  (+177 more)
src/db/WireConn/: Makefile  tmg_conn.cpp  tmg_conn.h  tmg_conn_g.cpp  tmg_conn_s.cpp  tmg_conn_w.cpp  wOrder.cpp
src/db/db_tcl/: Makefile  ZDB.cpp  ZDB.h  ZDB.ti  rpt_region.cpp  sdc_db.cpp  sdc_db.h  test_eco.cpp
src/db/examples/: create.cpp  dump.cpp  print.cpp
src/db/test/: Makefile  test_strings.cpp  test_transform.cpp  test_wire.cpp
src/def/: CMakeLists.txt
src/defin/: 5_6.def  CMakeLists.txt  Makefile  create_box.cpp  create_box.h  def.h  def.l  def.ypp  def.ypp.org.091619  defin.cpp  defin.h  definBase.cpp  definBase.h  definBlockage.cpp  definBlockage.h  definComponent.cpp  definComponent.h  definFill.cpp  definFill.h  definGCell.cpp  definGCell.h  definIBlockage.h  definIComponent.h  definIFill.h  definIGCell.h  definINet.h  definINonDefaultRule.h  definIPin.h  definIPinProps.h  definIPropDefs.h  definIReader.h  definIRegion.h  definIRow.h  definISNet.h  definITracks.h  definIVia.h  definNet.cpp  definNet.h  definNonDefaultRule.cpp  definNonDefaultRule.h  (+25 more)
src/defout/: CMakeLists.txt  defout.cpp  defout.h  defout_impl.cpp  defout_impl.h  test.tcl  test_eco.tcl
src/lef/: CMakeLists.txt
src/lef56/: CMakeLists.txt  LICENSE.TXT  template.mk
src/lef56/TEST/: Makefile
src/lef56/clef/: FEF_stringhash.c  FEF_stringhash.h  crypt.h  lef.y  lef_keywords.c  lefiArray.h  lefiDebug.c  lefiMisc.c  lefiMisc.h  lefiNonDefault.c  lefiUnits.h  lefwWriterCalls.h
src/lef56/clefzlib/: .cmake.state  Makefile  lefzlib.c
src/lef56/lef/: Makefile.orig  lef.tab.cpp  lef.y  lef_keywords.cpp  lefiArray.cpp  lefiCrossTalk.cpp  lefiLayer.cpp  lefiMisc.cpp  lefiProp.hpp  lefiTBExt.cpp  lefiViaRule.cpp  lefwWriterCalls.cpp
src/lef56/lefdiff/: datestamp.cpp  diffLefRW.cpp  differLef.cpp
src/lef56/lefrw/: lefrw.cpp
src/lef56/lefwrite/: lefwrite.cpp
src/lef56/lefzlib/: lefzlib.cpp
src/lefin/: CMakeLists.txt  Makefile  lefTechLayerSpacingEolParser.cpp  lefin.cpp  lefin.h  reader.cpp
src/lefout/: CMakeLists.txt  Makefile  lefout.cpp
src/swig/python/: CMakeLists.txt  __init__.py.in  dbenums.i  dbhelpers.i  dboperators.i  dbtypes.i  opendbpy.i  parserenums.i  setup.py.in
src/swig/tcl/: CMakeLists.txt  dbdiff.i  dbenums.i  dbhelpers.i  dbtypes.i  helpers.tcl  main.cpp  opendbtcl.i  parserenums.i  polygon.i  rawstring_begin.txt
src/sylib/: CMakeLists.txt  Makefile  attr_lookup.cpp  group_lookup.cpp  liberty_parser.y  liberty_structs.h  sy_func.cpp  sy_lib.cpp  sy_palloc.cpp  sy_palloc.h  sy_pi.cpp  sy_pi.h  sylib_main.cpp  token.l
src/tm/: CMakeLists.txt  Makefile  ZFactory.cpp  ZNamespace.cpp  ZObject.cpp  ZSession.cpp  ZSession.ti  ZTechModuleMgr.cpp  tm.cpp  tm.cpp.test
src/zlib/: CMakeLists.txt  ZException.cpp  adsRTreeCore.cpp  adsRTreeCore.h
src/zutil/: CMakeLists.txt  Makefile  atypes.cpp  b100.cpp  charBuffer.cpp  conn.cpp  debug_filter.cpp  dgraph.cpp  files.cpp  graph.cpp  gz.cpp  kdtree.cpp  mem.cpp  misc_functions.cpp  name.cpp  old_top_pins.cpp  parse.cpp  poly_decomp.cpp  qconn.cpp  qtype.cpp  test_mem_util.cpp  top_pins.cpp  xf.cpp  zui.cpp
tests/: parser_test.defok  regression-cpp.sh  regression-py.sh  regression-tcl.sh  regression.sh  unitTests.sh
tests/cpp/: CMakeLists.txt  CallBack.h  TestCallBacks.cpp  TestGroup.cpp  TestLef58Properties.cpp  TestLogger.cpp  TestModule.cpp  helper.cpp  test.cpp
tests/data/: design.def  parser_test.def
tests/python/: 02-read_lef_test.py  03-dump_via_rules_test.py  04-dump_vias_test.py  05-read_def_test.py  06-read_design_test.py  07-dump_nets_test.py  08-write_lef_and_def_test.py  09-lef_data_access_test.py  10-gcd_def_access_test.py  11-gcd_pdn_def_access_test.py  12-edit_def_test.py  13-wire_encoder_test.py  14-edit_via_params_test.py  15-row_settings_test.py  16-write_def_versions_test.py  17-db_read-write_test.py  import_package_test.py  (+1 more)
(+1068 files in other folders)
